log
Thu 21 Mar 2024 08:12:54 PM UTC: 
 tests:  0|5
total_score: 0/70
1d92077
Thu 21 Mar 2024 08:20:29 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:8: error: ‘i’ undeclared (first use in this function)
   46 |   for (i = 1 ; i < 11 ; i++){
      |        ^
exercises.c:46:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
8fa2e66
Thu 21 Mar 2024 08:21:15 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
d39d210
